--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^5.15.20",
     "@mui/x-charts": "^7.7.0",
     "@mui/x-data-grid": "^7.7.0",
+    "@mui/x-date-pickers": "^7.8.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "googleapis": "^140.0.1",
+    "dayjs": "^1.11.11",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
