--- a/Main_server/package.json
+++ b/Main_server/package.json
@@ -12,7 +12,7 @@
     "ts-node": "^10.9.2"
   },
   "scripts": {
-    "start": "nodemon server.ts"
+    "start": "nodemon server.js"
   },
   "name": "server",
   "version": "1.0.0",
