--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@mui/x-charts": "^7.7.0",
     "@mui/x-data-grid": "^7.7.0",
     "@mui/x-date-pickers": "^7.8.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "googleapis": "^140.0.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "googleapis": "^140.0.1",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
