--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.11",
     "googleapis": "^140.0.1",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
