--- a/client/package.json
+++ b/client/package.json
@@ -22,14 +22,15 @@
     "class-variance-authority": "^0.7.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "framer-motion": "^11.3.18",
     "googleapis": "^140.0.1",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
