--- a/docker-composer.yaml
+++ b/docker-composer.yaml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: client
     ports:
       - "3000:3000"
     environment:
