--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
+    "framer-motion": "^11.3.18",
     "googleapis": "^140.0.1",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
