--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@mui/x-charts": "^7.7.0",
     "@mui/x-data-grid": "^7.7.0",
     "@mui/x-date-pickers": "^7.8.0",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -28,13 +30,13 @@
     "googleapis": "^140.0.1",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-beautiful-dnd": "^13.1.1"
+    "react-dom": "^18.3.1",
+    "stripe": "^16.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
